the middle part of 26.10.21

--- a/index.html
+++ b/index.html
@@ -27,6 +27,43 @@
         <div class="headi">
             <header class="header">
                 <div class="head-container container">
+
+
+                    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+                        <div class="nav-lgo col-3">
+                            <a class="navbar-brand mr-0 mr-sm-1" href="#">LU<lt class="logofix">CI</lt><b>D</b></a>
+                            <div class="logo-info mr-auto">
+                                <p class="logo-info">onepage<br>theme</p>
+                        </div>
+                    </div>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Features</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Testimonials</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Pricing</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact</a>
+                            </li>
+                        </ul>
+                        </div>  
+                    </nav>
+
+
                     <nav class="head-navbar navbar navbar-expand-lg navbar-dark">
                         <div class="nav-lgo col-3 col-md-2">
                                 <a class="navbar-brand mr-0 mr-sm-1" href="#">LU<lt class="logofix">CI</lt><b>D</b></a>
@@ -35,7 +72,7 @@
                             </div>
                         </div>
                         <div class="nav-menu col-9 col-md-10 justify-content-end">
-                            <button class="navba     navbar-toggler btn btn-outline-dark ml-auto " type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-pressed="false">Ξ</button>
+                            <button class="navba navbar-toggler btn btn-outline-dark ml-auto " type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-pressed="false">Ξ</button>
                             <div class="menu collapse navbar-collapse" id="collapsibleNavId">
                                 <ul class="navbar-nav ml-auto mt-lg-0">
                                     <li class="nav-item active">
@@ -497,9 +534,9 @@
                     <div class="rehearsal-cont container">
                         <div class="row">
                             <div class="rehearsal-heading col-xl-7 col-lg-12">
-                                <h2 class="rehearsal-heading__text"><b>Like what you see? </b>Get this great theme now!</h2>
+                                <h2 class="rehearsal-heading__text"><b>Like what you see? </b>Get&nbsp;this great theme now!</h2>
                             </div>
-                            <div class="rehearsal-buttons col">
+                            <div class="rehearsal-buttons col-xl">
                                 <button type="button" class="info-cont__buttons__primary btn btn-primary">VIEW FEATURES</button>
                                 <button type="button" class="info-cont__buttons__outline__secondary btn btn-outline-secondary">DOWNLOAD NOW</button>
                             </div>
@@ -612,19 +649,85 @@
                             </div>
                         </div>
                         <div class="contacts-tar row">
-                            <div class="offset-md-1 col-md-2 offset-1 col-4">
-                                <div class="blocks"></div>
+                            <div class="offset-xl-1 offset-md-1"></div>
+                            <div class="contacts-item col-xl-2 col-md-3 col-sm-6">
+                                <div class="contacts-item__tel">
+                                    <div class="contacts-item__tel__img">
+                                        <img src="/img/contact/contact_1.png" class="img-fluid" title="contacts_1" alt="contacts_1">
+                                    </div>
+                                    <div class="contacts-item__tel__text">
+                                        <p class="contacts-item__text__item _tel">Phone: (415) 124-5678</p>
+                                        <p class="contacts-item__text__item _tel">Fax: (412) 123-8290</p>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="offset-md-2 col-md-2 col-4 offset-2 col-4">
-                                <div class="blocks"></div>
+                            <div class="offset-xl-2 offset-lg-1 offset-md-0"></div>
+                            <div class="contacts-item col-lg-2 col-md-4 col-sm-6">
+                                <div class="contacts-item__geo">
+                                    <div class="contacts-item__geo__img">
+                                        <img src="/img/contact/contact_2.png" class="img-fluid" title="contacts_2" alt="contacts_2">
+                                    </div>
+                                    <div class="contacts-item__geo__text">
+                                        <p class="contacts-item__text__item">1001 Brickell Bay Dr.</p>
+                                        <p class="contacts-item__text__item">Suite 1900</p>
+                                        <p class="contacts-item__text__item">Miami, FL 33131</p>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="offset-1 offset-md-0"></div>
-                            <div class="offset-md-1 col-md-4 col">
-                                <div class="blocks"></div>
+                            <div class="offset-1 offset-lg-1 offset-md-0"></div>
+                            <div class="contacts-item col-xl-4 col-md-3">
+                                <div class="contacts-item__mail">
+                                    <div class="contacts-item__mail__img">
+                                        <img src="/img/contact/contact_3.png" class="img-fluid" title="contacts_3" alt="contacts_3">
+                                    </div>
+                                    <div class="contacts-item__mail__text">
+                                        <p class="contacts-item__text__item">support@yourname.com</p>
+                                    </div>  
+                                </div>
+                            </div>
+                            <div class="offset-md-1"></div>
+                        </div>
+
+                        <div class="cont-row row justify-content-center">
+                            <div class="cont-form col-md-8 row justify-content-center">
+                                <div class="cont-form__wrapper">
+                                    <form id="form" class="form-group" action="#" method="get">
+                                        <div class="form-row row">
+                                            <div class="offset-md-1"></div>
+                                            <div class="form-row__col _1 col-lg-5 col-md-4">
+                                                <div class="form__item">
+                                                    <input type="text" id="name" name="name" class="form__input _req _name" onfocus="this.value=''" placeholder="NAME *">
+                                                </div> 
+                                                <div class="form__item">
+                                                    <input type="text" id="email" name="email" class="form__input _req _email" onfocus="this.value=''" placeholder="EMAIL *">
+                                                </div>
+                                                <div class="form__item">
+                                                    <input type="text" id="speciality" name="specs" class="form__input _req _spec" onfocus="this.value= ''" placeholder="SUBJECT *">
+                                                </div>
+                                            </div>
+
+
+                                            <div class="offset-md-2 offset-lg-1 offset-xl-0"></div>
+
+                                            <div class="form-row__col _2 col-xl-5 col-md-4">
+                                                <div id="error"></div>
+                                                <div class="form__item">
+                                                    <textarea name="message" id="message" class="form__input _req form_textarea"  onfocus="this.value=''" placeholder="MESSAGE *"></textarea>
+                                                </div>
+                                                <div class="form__item__button">
+                                                    <button type="submit" class="form__input__button btn btn-primary active">send message</button>
+                                                </div>
+                                            </div>
+                                            <div class="offset-md-1"></div>
+                                        </div>
+                                        
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                
             </contact>
 
             <map class="map" id="map" >
