the end of middle par of 28.10.21

--- a/index.html
+++ b/index.html
@@ -660,10 +660,10 @@
 
                     <div class="cont-row row justify-content-center">
                         <div class="cont-form col-md-8 row justify-content-center">
-                            <div class="cont-form__wrapper">
+                            <div class="cont-form__wrapper col-md">
                                 <form id="form" class="form-group" action="#" method="get">
                                     <div class="form-row row">
-                                        <div class="offset-md-1"></div>
+                                        <div class="offset-1"></div>
                                         <div class="form-row__col _1 col-lg-5 col-md-4">
                                             <div class="form__item">
                                                 <input type="text" id="name" name="name" class="form__input _req _name" onfocus="this.value=''" placeholder="NAME *">
@@ -713,7 +713,7 @@
             </map>
     </div>
 
-    <footer class="foter sticky-bottom">
+    <footer class="footer sticky-bottom">
         <div class="footer-wrapper  sticky-bottom">
             <div class="footer-cont container">
                 <div class="footer-icons-row centered col">
