the final w/slider 28.10.21

--- a/index.html
+++ b/index.html
@@ -540,8 +540,8 @@
                                 </li>
                                 <li class="price-table__item__price">
                                     <div class="price-table__item__price__item">
-                                        <h1 class="price-table__item__price__numb__first">0</h1>
-                                        <div class="price-table__item__price__text">/per month</div>
+                                        <h1 class="price-table__item__price__numb _first">0</h1>
+                                        <p class="price-table__item__price__text">/per month</p>
                                     </div>
                                 </li>
                                 <li class="price-table__item__about">
@@ -558,7 +558,7 @@
                                 <li class="price-table__item__price">
                                     <div class="price-table__item__price__item">
                                         <h1 class="price-table__item__price__numb">25</h1>
-                                        <div class="price-table__item__price__text">/per month</div>
+                                        <p class="price-table__item__price__text">/per month</p>
                                     </div>
                                 </li>
                                 <li class="price-table__item__about">
@@ -569,20 +569,20 @@
                                 </li>
                         </ul>
                         <ul class="pricing-table__item active col-lg-3 col-sm-6 col-xs">
-                                <li class="price-table__item__header active">
-                                    <h3 class="price-table__item__header__type active">business</h3>
+                                <li class="price-table__item__header">
+                                    <h3 class="price-table__item__header__type">business</h3>
                                 </li>
-                                <li class="price-table__item__price active">
-                                    <div class="price-table__item__price__item active">
-                                        <h1 class="price-table__item__price__numb active">50</h1>
-                                        <div class="price-table__item__price__text active">/per month</div>
+                                <li class="price-table__item__price">
+                                    <div class="price-table__item__price__item">
+                                        <h1 class="price-table__item__price__numb">50</h1>
+                                        <p class="price-table__item__price__text">/per month</p>
                                     </div>
                                 </li>
                                 <li class="price-table__item__about">
                                     <p class="price-table__item__about__item">
                                         Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum <a href="#" class="price-table__item__about__link">lacinia</a> consectetur.
                                     </p>
-                                    <button type="button" class="price-table__item__about__button btn btn-primary active">order now</button>
+                                    <button type="button" class="price-table__item__about__button__outline__secondary price-table__item__about__button btn btn-outline-secondary">order now</button>
                                 </li>
                         </ul>
                         <ul class="pricing-table__item col-lg-3 col-sm-6 col-xs">
@@ -592,7 +592,7 @@
                                 <li class="price-table__item__price">
                                     <div class="price-table__item__price__item">
                                         <h1 class="price-table__item__price__numb">99</h1>
-                                        <div class="price-table__item__price__text">/per month</div>
+                                        <p class="price-table__item__price__text">/per month</p>
                                     </div>
                                 </li>
                                 <li class="price-table__item__about">
@@ -659,7 +659,7 @@
                     </div>
 
                     <div class="cont-row row justify-content-center">
-                        <div class="cont-form col-md-8 row justify-content-center">
+                        <div class="cont-form col-sm-10 col-lg-10 col-xl-8 row justify-content-center">
                             <div class="cont-form__wrapper col-md">
                                 <form id="form" class="form-group" action="#" method="get">
                                     <div class="form-row row">
@@ -734,6 +734,7 @@
     </div>
 
     <script src="/js/script.js"></script>
+    <script src="/js/slick.min.js"></script>
     <!--      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
