ps: small  text-style fix

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!--THE RIGHT CONFIGURATED VERSION OF LAYOUT FOR PIXELPERFECT: 
+/img/layout_PERFECT.png
+-->
 <!DOCTYPE html>
 
 <head>
@@ -38,58 +41,23 @@
                                     <a class="head-menu__list__item__link nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="head-menu__list__item nav-item">
-                                    <a class="head-menu__list__item__link nav-link" href="#">Features</a>
+                                    <a class="head-menu__list__item__link nav-link" href="#overview">Features</a>
                                 </li>
                                 <li class="head-menu__list__item nav-item">
-                                    <a class="head-menu__list__item__link nav-link" href="#">About</a>
+                                    <a class="head-menu__list__item__link nav-link" href="#overview">About</a>
                                 </li>
                                 <li class="head-menu__list__item nav-item">
-                                    <a class="head-menu__list__item__link nav-link" href="#">Testimonials</a>
+                                    <a class="head-menu__list__item__link nav-link" href="#feedbacks">Testimonials</a>
                                 </li>
                                 <li class="head-menu__list__item nav-item">
-                                    <a class="head-menu__list__item__link nav-link" href="#">Pricing</a>
+                                    <a class="head-menu__list__item__link nav-link" href="#pricing">Pricing</a>
                                 </li>
                                 <li class="head-menu__list__item nav-item">
-                                    <a class="head-menu__list__item__link nav-link" href="#">Contact</a>
+                                    <a class="head-menu__list__item__link nav-link" href="#contact">Contact</a>
                                 </li>
                             </ul>
                         </div>
                     </nav>
-
-
-                    <!--<nav class="head-navbar navbar navbar-expand-lg navbar-dark">
-                        <div class="nav-lgo col-3 col-md-2">
-                                <a class="navbar-brand mr-0 mr-sm-1" href="#">LU<lt class="logofix">CI</lt><b>D</b></a>
-                                <div class="logo-info mr-auto">
-                                    <p class="logo-info">onepage<br>theme</p>
-                            </div>
-                        </div>
-                        <div class="nav-menu col-9 col-md-10 justify-content-end">
-                            <button class="navba navbar-toggler btn btn-outline-dark ml-auto " type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-pressed="false">Ξ</button>
-                            <div class="menu collapse navbar-collapse" id="collapsibleNavId">
-                                <ul class="navbar-nav ml-auto mt-lg-0">
-                                    <li class="nav-item active">
-                                        <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Features</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">About</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Testimonials</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Pricing</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Contact</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </nav>-->
                 </div>
             </header>
             <inform class="inform">
@@ -111,8 +79,6 @@
                                     <button type="button" class="info-cont__buttons__primary btn btn-primary">DOWNLOAD NOW</button>
                                     <button type="button" class="info-cont__buttons__outline__secondary btn btn-outline-secondary">VIEW FEATURES</button>
                                 </div>
-
-
                             </div>
                         </div>
                         <div class="info-image col-md">
@@ -126,7 +92,7 @@
         </div>
 
         <div class="main flex-fill">
-            <overview class="overview">
+            <overview class="overview" id="overview">
                 <div class="overview-wrapper">
                     <div class="overview-cont container">
                         <div class="overview-info col">
@@ -195,7 +161,7 @@
             </overview>
             <hr>
 
-            <detail class="detail">
+            <detail class="detail" id="about">
                 <div class="detail-wrapper">
                     <div class="detail-cont container">
                         <div class="detail-row row">
@@ -262,7 +228,7 @@
 
 
 
-            <feedbacks class="feedbacks">
+            <feedbacks class="feedbacks" id="feedbacks">
                 <div class="feed-wrapper">
                     <div class="feed-cont container">
                         <div class="feed-info col">
@@ -521,7 +487,7 @@
             </div>
         </rehearsal>
 
-        <pricing class="pricing">
+        <pricing class="pricing" id="pricing">
             <div class="pricing-wrapper">
                 <div class="pricing-cont container">
                     <div class="pricing-info col">
@@ -606,7 +572,7 @@
                 </div>
             </div>
         </pricing>
-        <contact class="contact">
+        <contact class="contact" id="contact">
             <div class="contact-wrapper">
                 <div class="contact-cont container ">
                     <div class="contact-info col">
@@ -735,104 +701,7 @@
 
     <script src="/js/script.js"></script>
     <script src="/js/slick.min.js"></script>
-    <!--      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
--->
     <script src="https://kit.fontawesome.com/f2c150d561.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
-
-
-
-<!--<div class="nav">
-            <div class="container">
-                <div class="row">
-                    <div class="col-2">
-                        <div class="block">
-                            <a href="#" class="logo-title">LUCID</a>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="block">
-                            <button class="navbar-toggler d-lg-none btn-primary" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-                            aria-expanded="false" aria-label="Toggle navigation"></button>
-                            <nav class="navbar navbar-expand-sm bg-none navbar-expand-lg">
-                                <ul class="navbar-nav ml-auto collapse navbar-collapse">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Featurtes</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">About</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Testmonials</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Pricing</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Contacts</a>
-                                </li>
-                                </ul>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>-->
-<!--<div class="container">
-                <div class="col-3">
-                    <div class="block">
-                        <div class="logo">
-                            <div class="logo-title">
-                                <a href="#">LUCID</a>
-                            </div>
-                            <div class="logo-info">
-                                <a href="#" class="">onepage<br>theme</a>
-                            </div>
-
-
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="block">
-                        NAVIG
-                    </div>
-                </div>
-    </div>
-<div class="container">
-            <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: gray">
-                <div class="col-1">
-                    <a class="navbar-brand" href="#">LUCID</a>
-                </div>
-                <button class="navbar-toggler d-lg-none btn-primary" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-                    aria-expanded="false" aria-label="Toggle navigation"></button>
-                <div class="collapse navbar-collapse" id="collapsibleNavId">
-                    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Testmonials</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Testmonials</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Testmonials</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
--->
